<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShareActivity">

    <TextView
        android:id="@+id/confirm_your_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_gap"
        android:fontFamily="monospace"
        android:text="@string/confirm_your_information"
        android:textColor="@color/black"
        android:textSize="@dimen/main_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginBottom="@dimen/medium_gap"
        android:text="@string/name_label"
        android:textColor="@color/black"
        android:fontFamily="monospace"
        android:textSize="@dimen/regular_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_gap"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/name_label"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        tools:text="test" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/email_label"
        android:textColor="@color/black"
        android:textSize="@dimen/regular_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_gap"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/email_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email_label"
        app:layout_constraintTop_toTopOf="@+id/email_label"
        tools:text="test@gmail.com" />

    <TextView
        android:id="@+id/cellphone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/cellphone_label"
        android:textColor="@color/black"
        android:textSize="@dimen/regular_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/email_label"
        app:layout_constraintTop_toTopOf="@+id/cellphone_text_view" />

    <TextView
        android:id="@+id/cellphone_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintStart_toEndOf="@+id/cellphone_label"
        app:layout_constraintTop_toBottomOf="@+id/email_text_view"
        tools:text="11111111" />

    <Button
        android:id="@+id/action_share_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/share_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cellphone_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>